:sparkles: llamadas sincronicas con vendedores y productos
