# gateway/docs/swagger.json
@@ -597,9 +597,7 @@
                 "category",
                 "description",
                 "id_seller",
-                "name",
-                "price",
-                "stock"
+                "name"
             ],
             "properties": {
                 "category": {
